; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-lldp-tx.c_lldp_write_tlv_header.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-lldp-tx.c_lldp_write_tlv_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EBADMSG = common dso_local global i32 0, align 4
@ENOBUFS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32, i64)* @lldp_write_tlv_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lldp_write_tlv_header(i32** %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32** %0, i32*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %8 = load i32**, i32*** %5, align 8
  %9 = call i32 @assert(i32** %8)
  %10 = load i32, i32* %6, align 4
  %11 = icmp sgt i32 %10, 127
  br i1 %11, label %12, label %15

12:                                               ; preds = %3
  %13 = load i32, i32* @EBADMSG, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %4, align 4
  br label %44

15:                                               ; preds = %3
  %16 = load i64, i64* %7, align 8
  %17 = icmp ugt i64 %16, 511
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i32, i32* @ENOBUFS, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %44

21:                                               ; preds = %15
  %22 = load i32, i32* %6, align 4
  %23 = shl i32 %22, 1
  %24 = load i64, i64* %7, align 8
  %25 = and i64 %24, 256
  %26 = icmp ne i64 %25, 0
  %27 = xor i1 %26, true
  %28 = xor i1 %27, true
  %29 = zext i1 %28 to i32
  %30 = or i32 %23, %29
  %31 = load i32**, i32*** %5, align 8
  %32 = load i32*, i32** %31, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  store i32 %30, i32* %33, align 4
  %34 = load i64, i64* %7, align 8
  %35 = and i64 %34, 255
  %36 = trunc i64 %35 to i32
  %37 = load i32**, i32*** %5, align 8
  %38 = load i32*, i32** %37, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 1
  store i32 %36, i32* %39, align 4
  %40 = load i32**, i32*** %5, align 8
  %41 = load i32*, i32** %40, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 2
  %43 = load i32**, i32*** %5, align 8
  store i32* %42, i32** %43, align 8
  store i32 0, i32* %4, align 4
  br label %44

44:                                               ; preds = %21, %18, %12
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @assert(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
